@@ -1,3 +1,8 @@
+2014-10-23 belangeo <belangeo@gmail.com>
+
+    * Added new function: hzToMidi, converts a frequency in hertz to a midi note value.
+    - rev 1258
+
 -------------------------------------------------------------------------------------
 
 2014-10-17 belangeo <belangeo@gmail.com>
